2007-06-05  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (get_attribute_node_ns): New method.

	* ContentChecker.pm: |script| |async| and |defer|
	no longer require |src|.  |async| MUST NOT be
	specified if |defer|.  (HTML5 revision 858).

2007-05-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |<form><form>| went to inifinite loop.

2007-05-27  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (html): Set |is_root| (allowed
	as a document element) flag on.
	(new): Removed.
	(check_document): New method.

2007-05-27  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (thead, tfoot): Checker specifications
	were incorrect.

2007-05-27  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLURIAttrChecker): Include
	error position in the |type| option of the error.

	* HTMLTable.pm (form_table): The |$onerror| parameter
	is now optional.  Some bugs are fixed.

2007-05-27  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: New module.

	* ContentChecker.pm (table): Invoke table model error checker.

	* NanoDOM.pm (first_child, get_attribute_ns): New.

2007-05-26  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLLinkTypesAttrChecker): New checker.
	(link/@rel, a/@rel, area/@rel): Use new checker.

	* Makefile (_LinkTypeList.pm, RelExtensions.html): New rules.

	* _LinkTypeList.pm: New file.

	* mklinktypelist.pl: New file.

	* .cvsignore: |RelExtensions.html| added.

	* NanoDOM.pm (child_nodes): Returns an empty array
	for non-child-containing node types.
	(text_content): New attribute.

2007-05-26  Wakaba  <wakaba@suika.fam.cx>

	* IMTChecker.pm: New module.

	* ContentChecker.pm ($HTMLIMTAttrChecker): Call IMTChecker
	to test parameter value validity.

	* HTML.pm.src ($style_start_tag): Attributes were
	discarded.

2007-05-25  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLURIAttrChecker): Implemented.

2007-05-25  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm: All recommendations from RFC 3986