@@ -1,7 +1,7 @@
 1..780
 # Running under perl version 5.008007 for linux
-# Current time local: Tue Jun  5 09:55:01 2007
-# Current time GMT:   Tue Jun  5 00:55:01 2007
+# Current time local: Sat Jun 23 11:35:39 2007
+# Current time GMT:   Sat Jun 23 02:35:39 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
