@@ -1,3 +1,8 @@
+2007-06-23  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm.src: HTML5 revision 867 (a LF at the beginning of 
+	a |textarea| is removed).
+
 2007-06-05  Wakaba  <wakaba@suika.fam.cx>
 
 	* NanoDOM.pm (get_attribute_node_ns): New method.
